AOP: advice, pointcut and join point

--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
           <version>1.9.8.M1</version>
           <scope>runtime</scope>
       </dependency>
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.9.7</version>
+      </dependency>
 
 
   </dependencies>
